Add: home page with conversation and message

--- a/frontend/src/sass/components/_loginForm.scss
+++ b/frontend/src/sass/components/_loginForm.scss
@@ -4,14 +4,13 @@
     display: flex;
     flex-direction: column;
     &__inputText {
-        margin-bottom: 10px;
         padding: 5px;
         border-radius: 5px;
         border: none;
     }
     &__inputPassword {
         padding: 5px;
-        margin-bottom: 10px;
+        margin-top: 10px;
         border-radius: 5px;
         border: none;
     }
@@ -24,5 +23,21 @@
         background-color: blue;
         border-radius: 10px;
         margin-bottom: 40px;
+    }
+    &__errorMessage {
+        display: none;
+        background-color: white;
+        color: red;
+        padding: 3px 5px 5px 5px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+    &__errorMessages {
+        display: none;
+        background-color: white;
+        color: red;
+        padding: 5px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
     }
 }
