--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -4,4 +4,7 @@
 @import "./utils/keyframes";
 @import "./base/base";
 @import "./components/loginForm";
+@import "./components/getUsers";
+@import "./components/getConversations";
 @import "./pages/login";
+@import "./pages/home";
