--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -21,14 +21,13 @@ html, body {
   flex-direction: column;
 }
 .loginForm__inputText {
-  margin-bottom: 10px;
   padding: 5px;
   border-radius: 5px;
   border: none;
 }
 .loginForm__inputPassword {
   padding: 5px;
-  margin-bottom: 10px;
+  margin-top: 10px;
   border-radius: 5px;
   border: none;
 }
@@ -41,6 +40,234 @@ html, body {
   background-color: blue;
   border-radius: 10px;
   margin-bottom: 40px;
+}
+.loginForm__errorMessage {
+  display: none;
+  background-color: white;
+  color: red;
+  padding: 3px 5px 5px 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.loginForm__errorMessages {
+  display: none;
+  background-color: white;
+  color: red;
+  padding: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.search__input {
+  padding: 10px;
+  border: none;
+  margin: 10px 0px 0px 10px;
+  border-radius: 10px;
+  width: 218px;
+}
+.search__div {
+  position: absolute;
+  background-color: white;
+  padding: 10px;
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 218px;
+  margin-left: 10px;
+  border-radius: 10px;
+  max-height: 200px;
+  overflow-y: scroll;
+  box-shadow: 4px 4px 8px 1px black;
+}
+.search__div--error {
+  color: red;
+}
+.search__btn {
+  margin-top: 5px;
+}
+
+.logout {
+  padding: 10px;
+  border: none;
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+  background-color: aqua;
+}
+.modal__form {
+  display: flex;
+  flex-direction: column;
+}
+.modal__content {
+  margin-top: 10px;
+  border-radius: 5px;
+}
+.modal__btn {
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: none;
+}
+.modal__h4 {
+  margin: 10px 0 0 0;
+}
+.modal__errorMessage {
+  display: none;
+  background-color: white;
+  color: red;
+  padding: 3px 5px 5px 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.modal__errorMessages {
+  display: none;
+  background-color: white;
+  color: red;
+  padding: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.getConversations {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.getConversations__div {
+  cursor: pointer;
+  background-color: white;
+  padding: 10px;
+  border: 2px solid aqua;
+}
+.getConversations__h1 {
+  color: black;
+  margin: 0;
+  text-align: left;
+}
+.getConversations__content {
+  color: black;
+  margin: 0;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.getConversations__date {
+  color: black;
+  margin: 0;
+  text-align: left;
+  font-style: italic;
+}
+.getConversations__p {
+  text-align: left;
+  margin: 0;
+}
+
+.getAll {
+  height: calc(100% - 50px);
+  display: flex;
+}
+.getAll__div {
+  width: 218px;
+  border-radius: 10px;
+  background-color: blue;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.getMessage {
+  margin-top: 10px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  padding-bottom: 50px;
+  width: 560px;
+  overflow-y: scroll;
+}
+.getMessage__h1 {
+  position: fixed;
+  left: 54%;
+  margin-top: 0;
+}
+.getMessage__div--h3 {
+  text-align: center;
+}
+.getMessage__div--date {
+  font-style: italic;
+  text-align: left;
+}
+.getMessage__div--float {
+  display: flex;
+  justify-content: end;
+}
+.getMessage__div--flex {
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+}
+.getMessage__div--size {
+  width: 200px;
+  border-radius: 10px;
+  border: 4px solid aqua;
+  padding: 5px;
+  margin-left: 10px;
+  padding-left: 10px;
+  margin-bottom: 10px;
+}
+.getMessage__div--sizefloat {
+  padding: 5px;
+  border-radius: 10px;
+  border: 4px solid blue;
+  text-align: end;
+  padding-right: 10px;
+  width: 200px;
+  margin-bottom: 10px;
+}
+.getMessage__div--content {
+  text-align: left;
+}
+.getMessage__sending {
+  position: fixed;
+  background-color: blue;
+  padding: 5px;
+  bottom: 0;
+  border-radius: 5px;
+  width: 539px;
+  z-index: 1;
+  margin-bottom: 6px;
+}
+.getMessage__send {
+  display: flex;
+  justify-content: space-between;
+}
+.getMessage__send--input {
+  width: 75%;
+  border-radius: 5px;
+}
+.getMessage__send--btn {
+  padding: 0 5px;
+  background-color: aqua;
+  border: none;
+  border-radius: 5px;
+}
+.getMessage__send--color {
+  color: white;
 }
 
 /* Login page */
@@ -60,6 +287,18 @@ html, body {
   margin-top: 40px;
   text-align: center;
   margin-bottom: 30px;
+}
+
+.home {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: aqua;
+  width: 800px;
+  height: 500px;
+  border-radius: 20px;
+  box-shadow: 3px 3px 18px 3px aqua;
 }
 
 /*# sourceMappingURL=style.css.map */
