--- a/frontend/src/sass/utils/_maps.scss
+++ b/frontend/src/sass/utils/_maps.scss
@@ -1,6 +1,6 @@
 /* Maps for responsive device */
 
 $break: (
-    tablette: 768px,
-    desktop: 992px
+    desktopwidth: 1024px,
+    desktopheight: 780px
 );
